--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index",
-    "test": "jest --watchAll",
+    "start": "cross-env NODE_ENV=development nodemon index",
+    "test": "cross-env NODE_ENV=test jest --watchAll",
     "lint": "eslint .",
     "format": "eslint . --fix"
   },
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "config": "^3.3.11",
     "express": "^4.18.3",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
