--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "express": "^4.18.3",
+    "express-validator": "^7.0.1",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   },
