--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "config": "^3.3.11",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
+    "i18next": "^23.10.1",
+    "i18next-fs-backend": "^2.3.1",
+    "i18next-http-middleware": "^3.5.0",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   },
