--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^23.10.1",
     "i18next-fs-backend": "^2.3.1",
     "i18next-http-middleware": "^3.5.0",
+    "nodemailer": "^6.9.12",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   },
@@ -29,6 +30,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "nodemailer-stub": "^1.2.2",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4"
