--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon index",
-    "test": "cross-env NODE_ENV=test jest --watchAll",
+    "test": "cross-env NODE_ENV=test jest",
     "lint": "eslint .",
     "format": "eslint . --fix"
   },
@@ -20,7 +20,7 @@
     "i18next": "^23.10.1",
     "i18next-fs-backend": "^2.3.1",
     "i18next-http-middleware": "^3.5.0",
-    "nodemailer": "^6.9.12",
+    "nodemailer": "^4.7.0",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   },
@@ -30,9 +30,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
     "nodemailer-stub": "^1.2.2",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "smtp-server": "^3.13.3",
     "supertest": "^6.3.4"
   },
   "eslintConfig": {
@@ -62,5 +64,11 @@
         }
       ]
     }
+  },
+  "jest": {
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
   }
 }
